--- a/estilo.css
+++ b/estilo.css
@@ -2,7 +2,8 @@ body{
     width: 1280px;
     border: 10px;
     border-style: solid;
-    border-color: rgb(168, 168, 168);
+    background-color: aquamarine;
+    border-color: rgb(174, 15, 15);
     height: 800px;
     margin: 0;
     
